# lsode-rust

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: pendulum.rs
src/: lib.rs  odepack.f
tests/: direct_call.rs  solve_ode.rs  stiff.rs
