[package]
name = "lsode"
version = "0.2.8"
license = "MIT"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"
repository = "https://github.com/tungli/lsode-rust.git"
description = "Solve systems of differntial equations using LSODE subroutine from ODEPACK written in Fortran."
homepage = "https://github.com/tungli/lsode-rust.git"
build = "build.rs"
categories = ["science", "mathematics"]
keywords = ["ODE"]
readme = "README.md"
documentation = "https://docs.rs/lsode/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libffi = "0.9"

[build-dependencies]
cc = "1.0"
